add backwards compatibility and creation scenario
Signed-off-by: Samuel Herman <sherman8915@gmail.com>